--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "next-connect": "^0.13.0",
     "next-pwa": "^5.6.0",
     "next-share": "^0.19.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-data-table-component": "^7.5.3",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-youtube": "^10.0.0",
     "redux": "^4.2.0",
@@ -40,12 +40,17 @@
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/moment": "^2.13.0",
     "@types/multer": "^1.4.7",
     "@types/node": "18.8.2",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "typescript": "4.8.4"
+  },
+  "resolutions": {
+    "**/@types/react": "^17.0.21",
+    "**/@types/react-dom": "^17.0.9"
   }
 }
