--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ CONNECTION_URL = mongodb+srv://standoski:abednego@cluster0.blokv.mongodb.net/Cin
 
 PASS_SEC = 64ttransmodling
 JWT_SEC = 87everty998fry
+
+AWS_ACCESS_KEY_ID = AKIAW7JOVEH5L7Q6XYHA
+AWS_SECRET_ACCESS_KEY = 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
+AWS_REGION = eu-west-2
+AWS_BUCKET = newnodebucket
