--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.204.0",
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^1.1.2",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
     "jodit-react": "^1.3.21",
     "jose": "^4.10.0",
     "jsonwebtoken": "^8.5.1",
@@ -19,6 +21,7 @@
     "mongoose": "^6.6.5",
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "next": "12.3.1",
     "next-absolute-url": "^1.2.2",
     "next-connect": "^0.13.0",
