--- a/.gitignore
+++ b/.gitignore
@@ -19,11 +19,11 @@
 .DS_Store
 *.pem
 
-# .env
-# .env.development.local
-# .env.test.local
-# .env.production.local
-# .env.local
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
 
 # debug
 npm-debug.log*
